--- a/package.json
+++ b/package.json
@@ -68,7 +68,7 @@
     }
   },
   "scripts": {
-    "build": "rm dist/* && tsc && NODE_ENV=production webpack --config webpack.build.config.js && cp src/styles.css dist/styles.css && cp src/*.ts* dist",
+    "build": "tsc && NODE_ENV=production webpack --config webpack.build.config.js && cp src/styles.css dist/styles.css && cp src/*.ts* dist",
     "dev": "tsc -w -p tsconfig.dev.json & webpack-dev-server --config webpack.config.js --mode development --open",
     "styleguide": "tsc -w & styleguidist server",
     "build-styleguide": "tsc && styleguidist build",
@@ -77,7 +77,10 @@
     "build-docs": "./build_docs.sh",
     "test": "tsc && jest --coverage",
     "prettier-check": "prettier --check src/**/*.ts src/**/*.tsx",
-    "prettier": "prettier --write src/**/*.ts src/**/*.tsx"
+    "prettier": "prettier --write src/**/*.ts src/**/*.tsx",
+    "precommit": [
+      "build"
+    ]
   },
   "dependencies": {
     "@babel/runtime": "^7.1.2"
